--- a/webview/src/main/assets/demo.html
+++ b/webview/src/main/assets/demo.html
@@ -29,6 +29,10 @@
             console.log("openActivityB.");
             xiangxuejs.takeNativeAction("openPage", {target_class: "com.kuki.app.MainProcessTestActivityB"});
         }
+        function openLoginActivity(){
+            console.log("openLoginActivity.");
+            xiangxuejs.takeNativeAction("openPage", {target_class: "com.kuki.usercenter.LoginActivity"});
+        }
 
     </script>
     <script src="js/xiangxuejs.js" charset="utf-8"></script>
@@ -37,5 +41,6 @@
 <div class="item" style="font-size: 20px; color: #ffffff" onclick="callAppToast()">调用: showToast</div>
 <div class="item" style="font-size: 20px; color: #ffffff" onclick="openActivityA()">打开MainProcessTestActivity</div>
 <div class="item" style="font-size: 20px; color: #ffffff" onclick="openActivityB()">打开另外一个主进程的activity</div>
+<div class="item" style="font-size: 20px; color: #ffffff" onclick="openLoginActivity()">打开LoginActivity</div>
 </body>
 </html>
